--- a/src/pages/posts/styles.module.scss
+++ b/src/pages/posts/styles.module.scss
@@ -49,3 +49,34 @@
     }
   }
 }
+
+.pagination {
+  margin-top: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  div {
+    display: flex;
+  }
+
+  button {
+    font-size: 25px;
+    color: var(--white);
+    border-radius: 4px;
+    border: none;
+    padding: 0.5rem;
+    background-color: var(--blue-500);
+    transition: filter 0.1s ease-out;
+
+    display: flex;
+
+    & + button {
+      margin-left: 0.25rem;
+    }
+
+    &:hover {
+      filter: brightness(1.1);
+    }
+  }
+}
