created post detail page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,7 @@
 
 :root {
   --white: #fff;
-
+  --gray-50: #fafafa;
   --gray-100: #afafaf;
   --gray-200: #525252; // divider
   --gray-700: #15171b; // background header
